fix z-index probs

--- a/css/beast.scss
+++ b/css/beast.scss
@@ -450,7 +450,7 @@ li{
 			top: 0;
 			position: absolute;
 			text-align: center;
-			z-index: 9;
+			z-index: 1;
 			-webkit-perspective: 1000px;
 			-webkit-transform-style: preserve-3d;
 			img{
@@ -470,6 +470,7 @@ li{
 		position: relative;
 		margin-top: 80%;
 		width: 100%;
+		z-index: 9;
 		iframe{
 			margin-left: 20%;
 			margin-bottom: 20px;
@@ -751,7 +752,6 @@ p{
 			top: 0;
 			position: absolute;
 			text-align: center;
-			z-index: 9;
 			padding: 0;
 			-webkit-perspective: 1000px;
 			-webkit-transform-style: preserve-3d;
